--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ p { margin: 1.25rem 0; }
 
 a { color: #D8A1A6; text-decoration: none; }
 a:hover { color: #B8898D; }
-
+/* Navigation links only */
+p > a {
+  margin-right: 1.25rem;
+}
 pre {
   background: #1E1E1E;
   padding: 1rem;
